[workspace]
members = [
    "crates/iw2wth_core",
    "crates/iw2wth_runtime",
    "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
